--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "Codeigniter 3 Files Creator",
     "description": "Creating files never been so easy, with the help of CI3 Files Creator, you can create crud, model, controller, etc with a few clicks.",
     "icon": "assets/icon.png",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "publisher": "SyedMuradAliShah",
     "repository": "https://github.com/SyedMuradAliShah/codeigniter-3-files-creator",
     "author": "Syed Murad Ali Shah <murad@receivemail.org> (http://focdownloads.blogspot.com/)",
@@ -19,7 +19,7 @@
         "Other"
     ],
     "activationEvents": [
-        "onCommand:make.curd",
+        "onCommand:make.crud",
         "onCommand:make.controller",
         "onCommand:make.model",
         "onCommand:make.helper",
