--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "codeigniter-3-files-creator",
     "displayName": "Codeigniter 3 Files Creator",
-    "description": "Creating files never been so easy, with the help of CI3 Files Creator, you can create crud, model, controller, etc with a few clicks.",
+    "description": "Creating files never been so easy, with the help of CI3 Files Creator, you can create auth, crud, model, controller, migration etc with a few clicks.",
     "icon": "assets/icon.png",
     "version": "0.0.5",
     "publisher": "SyedMuradAliShah",
