--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "Codeigniter 3 Files Creator",
     "description": "Creating files never been so easy, with the help of CI3 Files Creator, you can create auth, crud, model, controller, migration etc with a few clicks.",
     "icon": "assets/icon.png",
-    "version": "0.1.7",
+    "version": "0.1.8",
     "publisher": "SyedMuradAliShah",
     "repository": "https://github.com/SyedMuradAliShah/codeigniter-3-files-creator",
     "author": "Syed Murad Ali Shah <murad@receivemail.org> (http://focdownloads.blogspot.com/)",
@@ -19,6 +19,7 @@
         "Other"
     ],
     "activationEvents": [
+        "onCommand:make.ci3_hook",
         "onCommand:make.ci3_template",
         "onCommand:make.ci3_migration_add_table",
         "onCommand:make.ci3_migration_rename_table",
@@ -37,6 +38,9 @@
     "main": "./extension",
     "contributes": {
         "commands": [{
+                "command": "make.ci3_hook",
+                "title": " CI3 make:hook"
+            }, {
                 "command": "make.ci3_template",
                 "title": " CI3 make:template"
             },
