--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "Codeigniter 3 Files Creator",
     "description": "Creating files never been so easy, with the help of CI3 Files Creator, you can create auth, crud, model, controller, migration etc with a few clicks.",
     "icon": "assets/icon.png",
-    "version": "0.2.6",
+    "version": "0.2.7",
     "publisher": "SyedMuradAliShah",
     "repository": "https://github.com/SyedMuradAliShah/codeigniter-3-files-creator",
     "author": "Syed Murad Ali Shah <murad@receivemail.org> (http://focdownloads.blogspot.com/)",
@@ -19,6 +19,7 @@
         "Other"
     ],
     "activationEvents": [
+        "onCommand:make.ci3_view",
         "onCommand:make.ci3_library_google_authenticator",
         "onCommand:make.ci3_hook",
         "onCommand:make.ci3_template",
@@ -39,6 +40,10 @@
     "main": "./extension",
     "contributes": {
         "commands": [
+            {
+                "command": "make.ci3_view",
+                "title": " CI3 make:view"
+            },
             {
                 "command": "make.ci3_library_google_authenticator",
                 "title": " CI3 make:library_google_authenticator"
